--- a/src/views/user/user-register-form.ejs
+++ b/src/views/user/user-register-form.ejs
@@ -16,6 +16,15 @@
 				<form action="/user/register" method="POST" enctype="multipart/form-data">
 					<div class="row product-detail">
 						<div class="col-12">
+							<% if (typeof errors != "undefined") { %>
+
+								<% errors.forEach(error => { %>
+	
+								<p> <%= error.msg %> </p>
+	
+								<% }) %>
+	
+								<% } %>
 							<label for="email" class="form-label">Email: *</label>
 							<input type="text" id="email" name="email" placeholder="Ej: example@example.com" class="form-input" value="">
 						</div>
